--- a/pom.xml
+++ b/pom.xml
@@ -171,13 +171,13 @@
     </pluginManagement>
   </build>
 
-  <dependencyManagement>
-    <dependencies>
-      <dependency>
-        <groupId>javax.servlet</groupId>
-        <artifactId>servlet-api</artifactId>
-        <version>2.5</version>
-      </dependency>
+  --<dependencyManagement>
+    --<dependencies>
+     -- <dependency>
+       -- <groupId>javax.servlet</groupId>
+        --<artifactId>servlet-api</artifactId>
+        --<version>2.5</version>
+     -- </dependency>
 
       <dependency>
         <groupId>javax.servlet.jsp</groupId>
