--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,6 +2,8 @@ pipeline
 agent any
 stages
 {
-stage(git clone')
+stage('git clone'){
+
 git 'https://github.com/reyazmansoori04/maven-project'
+}
 }
