--- a/jenkinsfile
+++ b/jenkinsfile
@@ -6,7 +6,7 @@ pipeline {
     {  
         
         stage ('git clone') {
-        step{
+        steps{
           git 'https://github.com/reyazmansoori04/maven-project'
          }
     
