--- a/jenkinsfile
+++ b/jenkinsfile
@@ -11,5 +11,15 @@ pipeline {
          }
     
     }
+    
+       stage ('git compile') {
+        steps{
+        withMaven(maven : 'LocalMaven')
+         {
+                    sh 'mvn compile'
+                }
+         }
+    
+    }
 }
 }
