--- a/jenkinsfile
+++ b/jenkinsfile
@@ -12,7 +12,15 @@ pipeline {
     
     }
     
+     stage ('git compile') {
+        steps{
+        withMaven(maven : 'LocalMaven')
+         {
+                    sh 'mvn compile'
+                }
+         }
     
+    }
     
       stage ('git install') {
         steps{
