--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,5 +1,7 @@
 pipeline {
-    agent any
+agent any
+parallel firstBranch: {
+    
 
 
     stages 
@@ -11,7 +13,9 @@ pipeline {
          }
     
     }
-    
+    }
+    parallel SecondBranch: {
+
      stage ('git compile') {
         steps{
         withMaven(maven : 'LocalMaven')
@@ -43,5 +47,6 @@ pipeline {
          }
     
     }
+}
 }
 }
