--- a/pom.xml
+++ b/pom.xml
@@ -21,12 +21,10 @@
     <module>webapp</module>
   </modules>
 
-  <distributionManagement>
-    <site>
-      <id>site-server</id>
-      <name>Test Project Site</name>
-      <url>file:///tmp/maven-project-site</url>
-    </site>
+   <distributionManagement>
+    ...
+    <downloadUrl>http://mojo.codehaus.org/my-project</downloadUrl>
+    <status>deployed</status>
   </distributionManagement>
          
   <build>
