--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
-  <modelVersion>4.0.0</modelVersion>  
+  <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.example.maven-project</groupId>
   <artifactId>maven-project</artifactId>
@@ -21,21 +21,23 @@
     <module>webapp</module>
   </modules>
 
-   <distributionManagement>
-    ...
-    <downloadUrl>http://mojo.codehaus.org/my-project</downloadUrl>
-    <status>deployed</status>
+  <distributionManagement>
+    <site>
+      <id>site-server</id>
+      <name>Test Project Site</name>
+      <url>file:///tmp/maven-project-site</url>
+    </site>
   </distributionManagement>
-         
+
   <build>
     <plugins>
       <plugin>
-       <artifactId>maven-compiler-plugin</artifactId>
-       <configuration>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
           <source>1.7</source>
           <target>1.7</target>
         </configuration>
-     </plugin>
+      </plugin>
 
       <plugin>
         <artifactId>maven-release-plugin</artifactId>
@@ -163,10 +165,10 @@
   <dependencyManagement>
     <dependencies>
       <dependency>
-       <groupId>javax.servlet</groupId>
+        <groupId>javax.servlet</groupId>
         <artifactId>servlet-api</artifactId>
-       <version>2.5</version>
-     </dependency>
+        <version>2.5</version>
+      </dependency>
 
       <dependency>
         <groupId>javax.servlet.jsp</groupId>
